# SWEditor

./: .gitignore  CLAUDE.md  LLM_WORKSPACE.md  README.md  SW1_hex_values.txt  TASKS.todo.md  TASKS.todo_python_version.md  archived_TASKS.todo_swift_port.md  pyproject.toml  pyrightconfig.json  swift-port-plan.md  swift-port-todos.md
SentinelWorldsEditor/: PHASE2-MALLOC-ISSUE.md
SentinelWorldsEditor/SentinelWorldsEditor/: AppDelegate.swift  AppState.swift  ContentView.swift  FocusedValues.swift  SentinelWorldsEditorApp.swift  WindowAccessor.swift  WindowDelegate.swift
SentinelWorldsEditor/SentinelWorldsEditor.xcodeproj/: project.pbxproj
SentinelWorldsEditor/SentinelWorldsEditor/Assets.xcassets/AppIcon.appiconset/: Contents.json
SentinelWorldsEditor/SentinelWorldsEditor/Constants/: ItemConstants.swift  PortraitConstants.swift  SaveFileConstants.swift
SentinelWorldsEditor/SentinelWorldsEditor/Models/: SaveGame.swift
SentinelWorldsEditor/SentinelWorldsEditor/Resources/: GPL-Header.txt
SentinelWorldsEditor/SentinelWorldsEditor/Services/: BinaryFileIO.swift  SaveFileService.swift  SaveFileValidator.swift
SentinelWorldsEditor/SentinelWorldsEditor/Views/: GPLLicenseView.swift
SentinelWorldsEditor/SentinelWorldsEditor/Views/Components/: ItemPicker.swift  PortraitPicker.swift  StatusBar.swift  (+1 more)
SentinelWorldsEditor/SentinelWorldsEditorTests/: BinaryFileIOTests.swift  ConstantsTests.swift  SentinelWorldsEditorTests.swift
src/: __init__.py  gui.py  inventory_constants.py  main.py  sw_constants.py
test_data/: gameA.FM  gameB.FM
tests/: test_inspector.py
(+19 files in other folders)
