[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-worlds-editor"
version = "0.5.0b1"
description = "Save game editor for Sentinel Worlds I: Future Magic (1989)"
authors = [
    {name = "Lee Hutchinson"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
keywords = ["sentinel-worlds", "game", "save-editor", "retro-gaming"]

[project.urls]
Homepage = "https://github.com/code-a-saurus/SWEditor"
Issues = "https://github.com/code-a-saurus/SWEditor/issues"

[project.scripts]
sw-editor = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]
